# AuxDisplay

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  main.cpp
cmake/: gtest.cmake
src/: CMakeLists.txt  Display.cpp  Display.hpp  Image.cpp  Image.hpp  MainWindow.cpp  MainWindow.h  Serial.cpp  Serial.hpp
tests/config/: CMakeLists.txt  config_test.cpp
